<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_all"
        android:name="com.example.convidados.view.AllGuestsFragment"
        android:label="@string/todos_convidados"
        tools:layout="@layout/fragment_all_guests" />

    <fragment
        android:id="@+id/nav_presents"
        android:name="com.example.convidados.view.PresentFragment"
        android:label="@string/presente"
        tools:layout="@layout/fragment_presents" />

    <fragment
        android:id="@+id/nav_absents"
        android:name="com.example.convidados.view.AbsentsFragment"
        android:label="@string/ausente"
        tools:layout="@layout/fragment_absents" />
</navigation>